# asset-hub-examples

./: .gitignore  README.md
asset-transfer-api-example/: README.md  package.json
asset-transfer-api-example/lib/: assetHubToAssetHubLocalForeignAssets.js  assetHubToAssetHubLocalForeignAssets.js.map  assetHubToParachainReserveTransferForeignAssets.js  assetHubToParachainReserveTransferForeignAssets.js.map  assetHubToParachainTeleportForeignAssets.js  assetHubToParachainTeleportForeignAssets.js.map  colors.d.ts  colors.js  colors.js.map  parachainToAssetHubTeleportForeignAssets.js  parachainToAssetHubTeleportForeignAssets.js.map  systemToParaReserveTransferForeignAssets.js  systemToParaReserveTransferForeignAssets.js.map  systemToParaTeleportForeignAssets.js  systemToParaTeleportForeignAssets.js.map  systemToSystemLocalForeignAssets.js  systemToSystemLocalForeignAssets.js.map
asset-transfer-api-example/src/: assetHubToAssetHubLocalForeignAssets.ts  assetHubToParachainReserveTransferForeignAssets.ts  assetHubToParachainTeleportForeignAssets.ts  systemToParaReserveTransferForeignAssets.ts  systemToParaTeleportForeignAssets.ts  systemToSystemLocalForeignAssets.ts
polkadot-js-example/: README.md  package.json  tsconfig.json
polkadot-js-example/lib/: foreignAssetTransferWithFee.js  foreignAssetTransferWithFee.js.map  foreignAssetsBurn.js  foreignAssetsBurn.js.map  foreignAssetsMint.js  (+3 more)
subxt-example/: Cargo.toml  README.md
subxt-example/metadata/: metadata.json  metadata.scale
subxt-example/src/: main.rs
txwrapper-example/: README.md  package.json  tsconfig.json
(+16 files in other folders)
