[package]
name = "subxt-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.34.0"
subxt-signer = { version = "0.34.0", features = ["subxt"]}
tokio = { version = "1.32", features = ["macros", "time", "rt-multi-thread"] }
hex = "0.4.3"
